--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 numpy==1.16.4
+pandas==0.24.2
 protobuf==3.8.0
+python-dateutil==2.8.0
+pytz==2019.1
 PyYAML==5.1.1
 scipy==1.3.0
 six==1.12.0
